--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   dio: ^3.0.10
+  flutter_slidable: ^0.5.7
 
 dev_dependencies:
   flutter_test:
