--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   dio: ^3.0.10
   flutter_slidable: ^0.5.7
+  easy_pip: ^0.1.0
+
 
 dev_dependencies:
   flutter_test:
