--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   dio: ^3.0.10
   flutter_slidable: ^0.5.7
   easy_pip: ^0.1.0
-
+  ext_video_player: ^0.0.4
 
 dev_dependencies:
   flutter_test:
