--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.apm_pip">
+    package="com.omarpv.misapm">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -10,8 +10,8 @@
          
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="apm_pip"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Mis APMs"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
